# glide

./: .dockerignore  .gitignore  CHECKPOINT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  VALIDATION.md  architecture.md  deploy.sh  pyproject.toml  requirements.txt  test_physics.py  uv.toml
.github/: copilot-instructions.md
configs/: ab_multisite_perf.yaml  example_mhd_january.yaml  example_mhd_january_periodic.yaml  example_multisite_january.yaml  local_smoke_test.yaml  multisite_validation_48h.yaml  smoke_mhd_single_release.yaml
data/: README.md
data/validation-timeseries/: BIR-75magl_FLEXPART_ECMWFHRES.csv  BIR-75magl_NAME_UMG.csv  BRM-212magl_FLEXPART_ECMWFHRES.csv  BRM-212magl_NAME_UMG.csv  BSD-248magl_FLEXPART_ECMWFHRES.csv  CBW-200magl_FLEXPART_ECMWFHRES.csv  CBW-200magl_NAME_UKV.csv  CBW-200magl_NAME_UMG.csv  CGR-10magl_FLEXPART_ECMWFHRES.csv  CGR-10magl_NAME_UMG.csv  CGR-5magl_FLEXPART_ECMWFHRES.csv  CMN-500magl_FLEXPART_ECMWFHRES.csv  CMN-500magl_NAME_UMG.csv  CRP-10magl_FLEXPART_ECMWFHRES.csv  CRP-10magl_NAME_UKV.csv  EGH-15magl_NAME_UKV.csv  GAT-341magl_FLEXPART_ECMWFHRES.csv  GAT-341magl_NAME_UMG.csv  HEI-30magl_FLEXPART_ECMWFHRES.csv  HEI-30magl_NAME_UMG.csv  HEL-110magl_FLEXPART_ECMWFHRES.csv  HEL-110magl_NAME_UMG.csv  HFD-100magl_FLEXPART_ECMWFHRES.csv  HFD-100magl_NAME_UKV.csv  HFD-100magl_NAME_UMG.csv  HPB-130magl_FLEXPART_ECMWFHRES.csv  HPB-130magl_NAME_UMG.csv  HTM-150magl_FLEXPART_ECMWFHRES.csv  HTM-150magl_NAME_UMG.csv  HUN-115magl_FLEXPART_ECMWFHRES.csv  HUN-115magl_NAME_UMG.csv  IMP-26magl_NAME_UKV.csv  JBO-45magl_FLEXPART_ECMWFHRES.csv  JFJ-1000magl_FLEXPART_ECMWFHRES.csv  JFJ-1000magl_NAME_UMG.csv  KIT-200magl_FLEXPART_ECMWFHRES.csv  KIT-200magl_NAME_UMG.csv  KRE-250magl_FLEXPART_ECMWFHRES.csv  KRE-250magl_NAME_UMG.csv  LIN-98magl_FLEXPART_ECMWFHRES.csv  (+60 more)
dev/: CHECKPOINT.md  PHYSICS_REVIEW_2026-07-02.md  TEST_REVIEW_2026-07-16.md
docs/: LPDM_physics_spec.md  README.md  VALIDATION.md  architecture.md  convection.md  turbulence.md
notebooks/: demo_run_local_footprints.ipynb  era5_retrieval_test.ipynb  flexpart_comparison.ipynb  footprint_explorer.ipynb  multisite_validation.ipynb  visualization_starter.ipynb  zarr_store_inspector.ipynb
scripts/: animate_footprints.py  download_era5_europe.slurm  download_sample_cube.py  extract_met_window.py  make_multisite_config.py  make_validation_timeseries.py  run_periodic.slurm  run_periodic_cuda.slurm  setup.sh
src/lpdm/: __init__.py  comparison.py  config.py  footprint_gridder.py  gpu_engine.py  main.py  met_reader.py  output_writer.py  release_generator.py  runtime.py  vertical_grid.py  visualize.py
src/lpdm/convection/: __init__.py  base.py  emanuel.py  no_convection.py
src/lpdm/turbulence/: __init__.py  base.py  hanna.py  placeholder.py
tests/: test_comparison.py  test_convection.py  test_diffusion_pde.py  test_dispersion_analytic.py  test_download_sample_cube.py  test_footprint.py  test_hanna.py  test_main_config.py  test_main_runtime.py  test_met_reader.py  test_output_writer.py  test_physics.py  test_plume_footprint.py  test_release_generator.py  test_terrain_transport.py  test_vertical_grid.py
